--- a/td_dashboard/templates/infant_dashboard.html
+++ b/td_dashboard/templates/infant_dashboard.html
@@ -28,13 +28,13 @@
           <li>
           {% for subject_identifier,infant in infants.items %}
           	{%  if not instruction == "V1" %}
-	          <A href="{% url 'subject_dashboard_url' dashboard_type='infant' dashboard_model='registered_subject' dashboard_id=infant.dashboard_id show='appointments' %}?instruction=V1">
+	          <A href="{% url 'subject_dashboard_url' dashboard_type='infant' dashboard_model='registered_subject' dashboard_id=infant.dashboard_id show='appointments' instruction='V1'%}">
 	             {{subject_identifier}} {{ infant.gender }} {{ infant.first_name|encrypted }} V1
 	          </A>
 	        {% elif not instruction == "V3" %}
           <br >
 	          {% if maternal_consent.version == '3' %}
-		           <A href="{% url 'subject_dashboard_url' dashboard_type='infant' dashboard_model='registered_subject' dashboard_id=infant.dashboard_id show='appointments' %}?instruction=V3">
+		           <A href="{% url 'subject_dashboard_url' dashboard_type='infant' dashboard_model='registered_subject' dashboard_id=infant.dashboard_id show='appointments' instruction='V3' %}">
 		             {{subject_identifier}} {{ infant.gender }} {{ infant.first_name|encrypted }} V3
 		          </A>
 		      {% endif %}
@@ -52,10 +52,10 @@
     {% block maternal_consent %}
     <tr name="top right"><td>
     <H3>Mother</H3>
-        <ul><A href="{% url 'subject_dashboard_url' dashboard_type='maternal' dashboard_model='maternal_eligibility' dashboard_id=maternal_eligibility.pk show='appointments' %}?instruction=V1">
+        <ul><A href="{% url 'subject_dashboard_url' dashboard_type='maternal' dashboard_model='maternal_eligibility' dashboard_id=maternal_eligibility.pk show='appointments' instruction='V1' %}">
         	{{ maternal_eligibility.registered_subject.subject_identifier }} [{{ maternal_consent.initials|encrypted }}] V1</A><br>
     {% if maternal_consent.version == '3' %}
-		 <A href="{% url 'subject_dashboard_url' dashboard_type='maternal' dashboard_model='maternal_eligibility' dashboard_id=maternal_eligibility.pk show='appointments' %}?instruction=V3">
+		 <A href="{% url 'subject_dashboard_url' dashboard_type='maternal' dashboard_model='maternal_eligibility' dashboard_id=maternal_eligibility.pk show='appointments' instruction='V3' %}">
 		    {{maternal_eligibility.registered_subject.subject_identifier}} [{{ maternal_consent.initials|encrypted }}]  V3
 		 </A>
 	{% endif %}
