--- a/td_maternal/templates/maternaleligibility_include.html
+++ b/td_maternal/templates/maternaleligibility_include.html
@@ -29,7 +29,7 @@
                 {% if maternal_eligibility.is_consented %}
                 	<td>
 		                	{% for consent in maternal_eligibility.previous_consents %}
-		                		<a href="{% url 'subject_dashboard_url' dashboard_type='maternal' dashboard_model='maternal_eligibility' dashboard_id=maternal_eligibility.pk show='appointments' %}?instruction=V{{consent.version}}"><div nowrap>{{ consent.subject_identifier }} (V{{consent.version}})</div></a>
+		                		<a href="{% url 'subject_dashboard_url' dashboard_type='maternal' dashboard_model='maternal_eligibility' dashboard_id=maternal_eligibility.pk show='appointments' instruction='V'|add:consent.version %}"><div nowrap>{{ consent.subject_identifier }} (V{{consent.version}})</div></a>
 		                	{% endfor %}
 		                	{% if maternal_eligibility.re_consent %}
 		                		<span style="color:red"><span><a href="{% url 'admin:td_maternal_maternalconsent_add' %}?registered_subject={{maternal_eligibility.registered_subject.pk}}&next=section_url&section_name=maternal">re-consent (V{{maternal_eligibility.latest_consent_version}})</a>
